<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/benjamin_davies___u6thlaapi_unsplash"
    android:layout_height="match_parent"
    tools:context=".Screen_2">



    <Button
        android:id="@+id/contact_button"

        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/contact"
        android:textAllCaps="true"

        app:layout_constraintLeft_toLeftOf="parent" android:layout_width="300dp"/>

    <Button
        android:id="@+id/why_ifs_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Why_ifs"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/help"
        android:textAllCaps="true"
/>


    <Button
        android:id="@+id/tap_for_information_button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="true"
        android:background="@drawable/custom_button"
        android:text="@string/Tap_for_information"
/>


</LinearLayout>