<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen_3">

    <TextView
        android:id="@+id/state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/State"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/state_editable_text_view" />


    <AutoCompleteTextView
        android:id="@+id/state_editable_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/Select_a_state"
        android:background="@drawable/coustum_input"
        android:completionThreshold="1"
        android:completionHint="Select a state"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/state_text_view"
        app:layout_constraintBottom_toBottomOf="@id/state_text_view"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/area_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/area"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/state_text_view"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/area_editable_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:hint="@string/Enter_area"
        android:background="@drawable/coustum_input"
        app:layout_constraintTop_toTopOf="@id/area_text_view"
        app:layout_constraintLeft_toRightOf="@id/area_text_view"
        app:layout_constraintBottom_toBottomOf="@id/area_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="@string/enter_area"
        android:inputType="text" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/show"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/area_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <ImageView
        android:id="@+id/image1_last_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>